parser.py
from .ply import yacc as yacc
from .ply import lex as lex
from . import regex

from . import event

import logging
LOG = logging.getLogger(__file__)

class TokenValue:
    def __init__(self, token, **kwds):
        self.value = token.value
        self.kwds = kwds
        
        if token.lexer.events:
            self.kwds['events'] = tuple(token.lexer.events)
            LOG.debug(self)
            token.lexer.events = []

    def __repr__(self):
        return f'TokenValue({self.value!r}, {self.kwds!r})'


class Parser:
    def __init__(self, **kwargs):
        self.lexer = lex.lex(module=self, **kwargs)
        self.parser = yacc.yacc(module=self, **kwargs)
        self.lexer.groups = [0]
        self.lexer.events = []
        self.lexer.line_start = 0
        self.lexer.group_count = 1
        self.errors = 0

    def parse(self, *args, **kwargs):
        return self.parser.parse(*args, **kwargs)


    tokens = (
        'PLUS',
        'STAR',
        'QMARK',
        'DOT',
        'LPAREN',
        'LPAREN_NAMED',
        'LPAREN_NOCAPTURE',
        'RPAREN',
        'LSQUARE',
        'RSQUARE',
        'LCURLY',
        'RCURLY',
        'COMMA',
        'INTEGER',
        'CARET',
        'NOT',
        'AND',
        'OR',
        'MINUS',
        'DIGIT',
        'NOTDIGIT',
        'SPACE',
        'NOTSPACE',
        'WORD',
        'NOTWORD',
        'EPSILON',
        'ESCAPED',
        'ID'
    )

    t_ignore = ' \t\r\v\f'

    def column(self, t):
        return t.lexpos - t.lexer.line_start

    def t_error(self, t):
        LOG.error(f'{t.lineno}:{self.column(t)}: Invalid character {repr(t.value[0])}')
        t.lexer.skip(1)

    states = (
        ('repeat', 'exclusive'),
        ('class', 'exclusive')
    )

    def t_comment(self, t):
        r'\#[^\n]*'
        pass

    def t_newline(self, t):
        r'\n+'
        t.lexer.lineno += len(t.value)
        t.lexer.line_start = t.lexpos

    def t_EPSILON(self, t):
        r'ε'
        t.value = TokenValue(t)
        return t

    def t_DIGIT(self, t):
        r'\\d'
        t.value = TokenValue(t)
        return t

    def t_NOTDIGIT(self, t):
        r'\\D'
        t.value = TokenValue(t)
        return t

    def t_SPACE(self, t):
        r'\\s'
        t.value = TokenValue(t)
        return t

    def t_NOTSPACE(self, t):
        r'\\S'
        t.value = TokenValue(t)
        return t

    def t_WORD(self, t):
        r'\\w'
        t.value = TokenValue(t)
        return t

    def t_NOTWORD(self, t):
        r'\\W'
        t.value = TokenValue(t)
        return t    

    def t_CARET(self, t):
        r'\^'
        t.value = TokenValue(t)
        return t

    def t_MINUS(self, t):
        r'\-'
        t.value = TokenValue(t)
        return t

    def t_AND(self, t):
        r'\&'
        t.value = TokenValue(t)
        return t

    def t_OR(self, t):
        r'\|'
        t.value = TokenValue(t)
        return t

    def t_QMARK(self, t):
        r'\?'
        t.value = TokenValue(t)
        return t

    def t_DOT(self, t):
        r'\.'
        t.value = TokenValue(t)
        return t

    def t_NOT(self, t):
        r'\~'
        t.value = TokenValue(t)
        return t

    def t_STAR(self, t):
        r'\*'
        t.value = TokenValue(t)
        return t

    def t_PLUS(self, t):
        r'\+'
        t.value = TokenValue(t)
        return t

    def t_LPAREN_NAMED(self, t):
        r'''(?x:                    # re.X
              \( \s*                # '('
                \? \s*              # '?'
                P? \s*              # Optional 'P'
                < \s*               # '<'
                  (?P<name>
                    [a-zA-Z_]       # ID
                    [a-zA-Z0-9_]*   # ...
                  ) \s*             
                > \s*               # '>'
              )
        '''
        self.lexer.events.append(event.Event(event.OPEN, self.lexer.group_count,
            t.lexer.lexmatch.group('name')))
        t.value = TokenValue(t)
        self.lexer.groups.append(self.lexer.group_count)
        self.lexer.group_count += 1
        return t

    def t_LPAREN_NOCAPTURE(self, t):
        r'\(\s*\?\s*:'
        t.value = TokenValue(t)
        self.lexer.groups.append(-1)
        return t

    def t_LPAREN(self, t):
        r'\('
        self.lexer.events.append(event.Event(event.OPEN, self.lexer.group_count))
        t.value = TokenValue(t)
        self.lexer.groups.append(self.lexer.group_count)
        self.lexer.group_count += 1
        return t

    def t_RPAREN(self, t):
        r'\)'
        group = self.lexer.groups.pop()
        if group != -1:
            self.lexer.events.append(event.Event(event.CLOSE, group))
        t.value = TokenValue(t)
        return t

    def t_LCURLY(self, t):
        r'\{'
        t.lexer.begin('repeat')
        return t

    def t_ESCAPED(self, t):
        r'\\.'
        t.value = TokenValue(t)
        return t

    t_repeat_ignore = ' \t'

    def t_repeat_INTEGER(self, t):
        r'\d+'
        t.value = int(t.value)
        return t

    def t_repeat_COMMA(self, t):
        r'\,'
        return t

    def t_repeat_RCURLY(self, t):
        r'\}'
        t.lexer.begin('INITIAL')
        return t

    def t_repeat_error(self, t):
        LOG.error("Illegal character '%s' in repeat at %d", t.value[0], t.lexpos)
        t.lexer.skip(1)

    def t_LSQUARE(self, t):
        r'\['
        t.lexer.begin('class')
        self.ID_scan = []
        return t

    t_class_ignore = ' \t'

    def t_class_error(self, t):
        LOG.error("Illegal character '%s' in class at %d", t.value[0], t.lexpos)
        t.lexer.skip(1)

    def t_class_MINUS(self, t):
        r'-'
    
        # Position in scanned class so far
        pos = len(self.ID_scan)
    
        # If '-' is first character (or after '^'), it's literal
        if pos == 0 or (pos == 1 and self.ID_scan[0] == '^'):
            t.type = 'ID'
        else:
            # Peek next character to see if we're right before ']'
            nxt = t.lexer.lexdata[t.lexer.lexpos:t.lexer.lexpos+1]
    
            if nxt == ']':
                # '-' at end of class is literal
                t.type = 'ID'
            else:
                # Otherwise it's a range operator
                t.type = 'MINUS'
    
        self.ID_scan.append(t.value)
        t.value = TokenValue(t)
        return t

    def t_class_ID(self, t):
        r'.'
    
        self.ID_scan.append(t.value)
    
        if t.value == '^' and len(self.ID_scan) == 1:
            t.type = 'CARET'
    
        if t.value == ']':
            if self.ID_scan == [']'] or self.ID_scan == ['^', ']']:
                pass
            else:
                t.lexer.begin('INITIAL')
                t.type = 'RSQUARE'
    
        t.value = TokenValue(t)
        return t

    def t_ID(self, t):
        r'.'
        t.value = TokenValue(t)
        return t

    precedence = (
        ('left', 'OR', 'CARET', 'MINUS'),
        ('left', 'AND'),
        ('right', 'NOT'),
        ('left', 'CONCAT')
    )

    def p_expr_and(self, p):
        'expression : expression AND expression'
        p[0] = regex.RegexAnd(p[1], p[3], **p[2].kwds)

    def p_expr_or(self, p):
        'expression : expression OR expression'
        p[0] = regex.RegexOr(p[1], p[3], **p[2].kwds)

    def p_expr_diff(self, p):
        'expression : expression MINUS expression'
        p[0] = regex.RegexDiff(p[1], p[3], **p[2].kwds)

    def p_expr_xor(self, p):
        'expression : expression CARET expression'
        p[0] = regex.RegexXor(p[1], p[3], **p[2].kwds)

    def p_expr_not(self, p):
        'expression : NOT expression'
        p[0] = regex.RegexNot(p[2], **p[1].kwds)

    def p_expr_concat(self, p):
        'expression : concat %prec CONCAT'
        p[0] = p[1]

    def p_concat_list(self, p):
        'concat : concat primary'
        p[0] = regex.RegexConcat(p[1], p[2])

    def p_concat_primary(self, p):
        'concat : primary'
        p[0] = p[1]

    def p_primary_star(self, p):
        'primary : primary STAR'
        p[0] = regex.RegexStar(p[1], **p[2].kwds)

    def p_primary_plus(self, p):
        'primary : primary PLUS'
        p[0] = regex.RegexPlus(p[1])

    def p_primary_opt(self, p):
        'primary : primary QMARK'
        p[0] = regex.RegexOpt(p[1], **p[2].kwds)

    def p_primary_repeat(self, p):
        'primary : primary LCURLY rspec RCURLY'

        # Generate a concatenation of an expression num times
        #
        def make_cat(expr, num):
            cat = expr
            for _ in range(num - 1):
                cat = regex.RegexConcat(cat, expr)

            return cat

        if isinstance(p[3], int):
            p[0] = make_cat(p[1], p[3])

        elif isinstance(p[3], tuple):
            lo, hi = p[3]
        
            # {,n}  →  0..n
            if lo is None and hi is not None:
                p[0] = regex.RegexEpsilon()
                for k in range(1, hi + 1):
                    cat = make_cat(p[1], k)
                    p[0] = regex.RegexOr(p[0], cat)
        
            # {0,}  →  0..∞  ==  r*
            elif lo == 0 and hi is None:
                p[0] = regex.RegexStar(p[1])
        
            # {m,} with m > 0  →  r^m r*
            elif lo is not None and hi is None:
                base = make_cat(p[1], lo)
                p[0] = regex.RegexConcat(base, regex.RegexStar(p[1]))
        
            # {m,n} with finite bounds
            else:
                p[0] = None
                for k in range(lo, hi + 1):
                    if k == 0:
                        cat = regex.RegexEpsilon()
                    else:
                        cat = make_cat(p[1], k)

                    if p[0] is None:
                        p[0] = cat
                    else:
                        p[0] = regex.RegexOr(p[0], cat)

    _DIGIT_MASK = 0
    for code in range(ord('0'), ord('9') + 1):
        _DIGIT_MASK |= 1 << code

    def p_primary_digits(self, p):
        'primary : DIGIT'

        p[0] = regex.RegexSym(Parser._DIGIT_MASK, **p[1].kwds)

    def p_primary_notdigit(self, p):
        'primary : NOTDIGIT'

        p[0] = regex.RegexSym(Parser._DIGIT_MASK, negate=True, **p[1].kwds)

    _SPACE_MASK = 0
    for ch in (' ', '\t', '\n', '\r', '\v', '\f'):
        _SPACE_MASK |= 1 << ord(ch)

    _WORD_MASK = 0
    for c in range(ord('A'), ord('Z') + 1):
        _WORD_MASK |= 1 << c
    for c in range(ord('a'), ord('z') + 1):
        _WORD_MASK |= 1 << c
    _WORD_MASK |= _DIGIT_MASK
    _WORD_MASK |= 1 << ord('_')

    def p_primary_word(self, p):
        'primary : WORD'
        p[0] = regex.RegexSym(Parser._WORD_MASK, **p[1].kwds)

    def p_primary_notword(self, p):
        'primary : NOTWORD'
        p[0] = regex.RegexSym(Parser._WORD_MASK, negate=True, **p[1].kwds)

    def p_primary_space(self, p):
        'primary : SPACE'
        
        p[0] = regex.RegexSym(Parser._SPACE_MASK, **p[1].kwds)

    def p_primary_notspace(self, p):
        'primary : NOTSPACE'

        p[0] = regex.RegexSym(Parser._SPACE_MASK, negate=True, **p[1].kwds)

    def p_primary_id(self, p):
        'primary : literal'
        p[0] = p[1]

    def p_primary_expr(self, p):
        'primary : LPAREN expression RPAREN'

        expr = regex.RegexExpr(p[2])
        concat = regex.RegexConcat(regex.RegexMarker(**p[1].kwds), expr)

        p[0] = regex.RegexConcat(concat, regex.RegexMarker(**p[3].kwds))

    def p_primary_named_expr(self, p):
        'primary : LPAREN_NAMED expression RPAREN'

        expr = regex.RegexExpr(p[2])
        concat = regex.RegexConcat(regex.RegexMarker(**p[1].kwds), expr)

        p[0] = regex.RegexConcat(concat, regex.RegexMarker(**p[3].kwds))

    def p_primary_no_capture_expr(self, p):
        'primary : LPAREN_NOCAPTURE expression RPAREN'
        p[0] = regex.RegexExpr(p[2], **p[1].kwds)

    def p_primary_class(self, p):
        'primary : LSQUARE opt_caret ranges RSQUARE'
        negate = p[2]         # True if there was a '^', else False
        items  = p[3]         # list of (char, kwds)

        # Build a single bitmask for all characters in this class
        #
        mask = 0
        for ch, _kwds in items:
            mask |= 1 << ord(ch)

        # Reuse the kwds from the first item (escape flags etc.)
        #
        kwds = items[0][1] if items else {}

        # One RegexSym that represents the whole class, possibly negated
        # 
        p[0] = regex.RegexSym(mask, negate=negate, **kwds)

    def p_class_inversion(self, p):
        'opt_caret : CARET'
        p[0] = True

    def p_class_positive(self, p):
        'opt_caret : '
        p[0] = False

    def p_ranges_list(self, p):
        'ranges : ranges range'
        p[0] = p[1] + p[2]

    def p_ranges_init(self, p):
        'ranges : range'
        p[0] = p[1]

    def p_range_literal(self, p):
        'range : ID'
        p[0] = [(p[1].value, p[1].kwds)]

    def p_range_span(self, p):
        'range : ID MINUS ID'
        p[0] = []

        start = ord(p[1].value)
        end   = ord(p[3].value)

        if start <= end:
            for code in range(start, end + 1):
                p[0].append((chr(code), p[1].kwds))
        else:
            LOG.error('Error: Range %s-%s in non-increasing order', p[1].value,
                p[3].value)
            self.errors += 1

    def p_literal_dot(self, p):
        'literal : DOT'
        p[0] = regex.RegexDot(**p[1].kwds)

    def p_literal_id(self, p):
        'literal : ID'
        p[0] = regex.RegexSym(p[1].value, **p[1].kwds)

    def p_literal_minus(self, p):
        'literal : MINUS'
        p[0] = regex.RegexSym(p[1].value, **p[1].kwds)

    def p_literal_escaped(self, p):
        'literal : ESCAPED'

        ctrl = {
            '\\a': '\a',
            '\\b': '\b',
            '\\t': '\t',
            '\\n': '\n',
            '\\v': '\v',
            '\\f': '\f',
            '\\r': '\r',
        }

        if p[1].value in ctrl:
            p[0] = regex.RegexSym(ctrl[p[1].value], **p[1].kwds)
        else:
            p[0] = regex.RegexSym(p[1].value[1], **p[1].kwds)

    def p_literal_epsilon(self, p):
        'literal : EPSILON'
        p[0] = regex.RegexEpsilon()

    def p_rspec_only(self, p):
        'rspec : INTEGER'
        p[0] = p[1]

    def p_rspec_min(self, p):
        'rspec : INTEGER COMMA'
        p[0] = (p[1], None)

    def p_rspec_max(self, p):
        'rspec : COMMA INTEGER'
        p[0] = (None, p[2])

    def p_rspec_minmax(self, p):
        'rspec : INTEGER COMMA INTEGER'
        if p[1] > p[3]:
            LOG.error('Error: Range %s-%s in non-increasing order', p[1], p[3])
            self.errors += 1
        p[0] = (p[1], p[3])

    def p_error(self, p):
        self.errors += 1

        if (p):
            LOG.error(f'{p.lineno}:{self.column(p)}: Syntax error at "{p.value.value}"')
        else:
            LOG.error('Syntax error at end of input')
